# munger-matics

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
app/: app.py
architecture/: index.html
config/: csv_mappings.toml  default_categories.toml
contributing/: index.html
design/architecture/: index.html
design/data-model/: index.html
design/feature-01-ledger/: index.html
design/finance-library/: index.html
design/finance-questions/: index.html
design/product-vision/: index.html
design/roadmap/: index.html
docs/: architecture.md  contributing.md  getting-started.md  index.md
docs/design/: architecture.md  data-model.md  feature-01-ledger.md  finance-library.md  finance-questions.md  product-vision.md  roadmap.md
getting-started/: index.html
notebooks/: 01_explore_raw_data.ipynb
search/: search_index.json
src/munger_matics/: __init__.py
src/munger_matics/accounts/: __init__.py  repository.py
src/munger_matics/budgets/: __init__.py  repository.py
src/munger_matics/categories/: __init__.py  repository.py
src/munger_matics/database/: __init__.py  connection.py  schema.py
src/munger_matics/finance/: __init__.py  _common.py  annuities.py  cashflows.py  compounding.py  rates.py
tests/: test_smoke.py
tests/accounts/: test_balance_history.py  test_repository.py
tests/budgets/: test_repository.py
tests/categories/: test_repository.py
tests/database/: test_connection.py  test_schema.py
tests/finance/: test_annuities.py  test_cashflows.py  test_compounding.py  test_rates.py
tests/fixtures/: sample_ccf.csv  sample_ldds.csv
tests/savings_goals/: test_repository.py
tests/transactions/: test_categorise.py  test_category_breakdown.py  test_derived_metrics.py  test_import_csv.py  test_repository.py  test_transfers.py
(+7 files in other folders)
