[project]
name = "munger-matics"
version = "0.1.0"
description = "Personal accounting, budgeting and financial planning application"
readme = "README.md"
authors = [
    { name = "Ranajoy Banerji", email = "14226544+ranajoy-cosmo@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.45.0",
    "polars>=1.0.0",
    "python-dotenv>=1.0.0",
    "prefect>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
munger-matics = "munger_matics:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
